@@ -1,0 +1,7 @@
+class AddSslLoginToSite < ActiveRecord::Migration
+  def self.up
+  end
+
+  def self.down
+  end
+end
