@@ -15,6 +15,7 @@
  * Added 'master_template' zafu method to access the master template used for compilation.
  * Fixed creation of modules bug.
  * Using latest QueryBuilder (fixes default scope bug).
+ * Added 'ssl_on_auth' option to force https after (and during) login. <=== TODO: Document
 
 == 1.2.0, 1.2.1 2012-05-01
 
